# nunavut

package/: build_dsdls.py  pyproject.toml  test.py
src/nunavut/: _namespace.py
src/nunavut/jinja/: __init__.py
src/nunavut/lang/: _common.py  _language.py  properties.yaml
src/nunavut/lang/c/: __init__.py
src/nunavut/lang/cpp/: __init__.py
src/nunavut/lang/py_c/: __init__.py
src/nunavut/lang/py_c/support/: CMakeLists.txt.j2  __init__.py  binding.cpp.j2  pyproject.toml.j2  python_binding.h.j2  python_binding.j2
src/nunavut/lang/py_c/templates/: Namespace.j2  ServiceType.j2  definitions.j2
src/nunavut/lang/py_c_library/: __init__.py
src/nunavut/lang/py_c_library/support/: CMakeLists.txt.j2  __init__.py  binding.cpp.j2  python_binding.h.j2  python_binding.j2
src/nunavut/lang/py_c_library/templates/: DelimitedType_impl.j2  Namespace.j2  Namespace_impl.j2  ServiceType.j2  ServiceType_impl.j2  StructureType_impl.j2  base.j2  definitions.j2
src/nunavut/lang/py_c_python/support/: nunavut_support.j2
src/nunavut/lang/py_c_python/templates/: ServiceType.j2  StructureType.j2  base.j2
test/gentest_serialization/: test_serialization.py
